scp/css/scp.css
/* ... */
.action-button.danger {
    color: #999 !important;
    background: transparent;
    border: 1px solid rgba(0,0,0,0.5);
    opacity: 0.6;
}

.action-button.overlay {
    float: none;
    position: absolute;
    top: 4px;
    right: 5px;
}
.muted-button:hover {
    border: 1px solid #aaa;
    border: 1px solid rgba(0,0,0,0.3);
    cursor: pointer;
    background: rgba(255,255,255,0.1);
    color: black;
}
.muted-button {
  border-radius: 5px;
  padding: 1px 5px;
  margin: -1px 0 -1px 5px;
  border: 1px solid rgba(0,0,0,0.15);
  color: #666;
  color: rgba(0,0,0,0.5);
  background-color: rgba(0,0,0,0.1);
  background: linear-gradient(0, rgba(0,0,0,0.1), rgba(255,255,255,0.1));
}

.sortable-rows tr td:hover {
    cursor: move;
}

.sortable {
    cursor: move;
}
.row-item {
    border: 1px solid rgba(0, 0, 0, 0.7);
    padding: 9px;
    position: relative;
}
.sortable:hover {
    background: rgba(0, 0, 0, 0.1);
}
.sortable:active {
    background: rgba(0, 0, 0, 0.3);
}
.row-item:first-child {
    border-top-right-radius: 5px;
    border-top-left-radius: 5px;
}
.row-item:last-child {
    border-bottom-right-radius: 5px;
    border-bottom-left-radius: 5px;
}
.row-item + .row-item {
    margin-top: -1px;
}

.row-item .delete {
    border-left: 1px solid rgba(0, 0, 0, 0.7);
    border-top-right-radius: inherit;
    border-bottom-right-radius: inherit;
    width: 35px;
}
.row-item .delete:empty {
    visibility: hidden;
}

.row-item .button-group {
    font-size: 105%;
    position: absolute;
    top: 0px;
    right: 0;
    display: inline-block;
}

.row-item .button-group div {
    display: inline-block;
}
.row-item .button-group div a {
    padding: 9px 12px 8px;
}
.row-item .management {
    margin-top: 10px;
    border-top: 1px dashed black;
}

.row-item:first-child .delete {
    border-top-right-radius: 5px;
}
.row-item:last-child .delete {
    border-bottom-right-radius: 5px;
}
.row-item .delete:hover {
    background: #fc9f41; /* Old browsers */
    color: rgba(255,255,255,0.8) !important;
}
#sequences .manage-buttons {
    display: inline-block;
    margin-right: 60px;
}

tr.disabled td,
tr.disabled th {
    opacity: 0.6;
    background: #f5f5f5;
}

.quicknote {
    margin: 10px 0;
    border: 1px solid rgba(0,0,0,0.2);
    border-radius: 4px;
}
.quicknote .header {
    position: relative;
    display: block;
    padding: 10px;
    border-bottom: 1px dashed rgba(0,0,0,0.2);
}
.quicknote .header .header-left {
    display: inline-block;
}
.quicknote .header .header-right {
    display: inline-block;
    text-align: right;
    right: 1em;
    position: absolute;
}
.quicknote .header .options {
    display: inline-block;
    padding-left: 10px;
    margin-left: 5px;
    white-space: nowrap;
    border-left: 1px solid rgba(0,0,0,0.2);
}
.quicknote .body {
    padding: 10px;
}
.quicknote a.action,
.floating-options a.action {
    box-sizing: content-box;
    -moz-box-sizing: content-box;
    -webkit-box-sizing: content-box;
    display: inline-block;
    width: 15px;
    text-align: center;
    padding: 2px 2px;
    color: black !important;
    background-color: #eee;
    background-color: rgba(0, 0, 0, 0.05);
    border-width: 1px;
    border-style: solid;
    border-color: #ddd;
    border-color: rgba(0, 0, 0, 0.1);
    border-radius: 4px;
}
.quicknote a.action:hover,
.floating-options a.action:hover {
    text-decoration: none;
    border-color: #ff9100;
    background-color: rgba(255, 145, 0, 0.05);
    border-radius: 3px;
}
.quicknote a.action.save-note,
.floating-options a.action.save-note {
    background-color: #bbeebb;
}
#new-note {
    margin-top: 10px;
}

.label {
    float: right;
    margin-bottom: 4px;
    font-size: 11px;
    padding: 0px 7px;
    -webkit-border-radius: 3px;
    -moz-border-radius: 3px;
    border-radius: 3px;
    font-weight: bold;
    line-height: 18px;
    color: #ffffff;
    vertical-align: baseline;
    white-space: nowrap;
    text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
    background-color: #999999;
}
.label-bare {
  background-color: transparent;
  background-color: rgba(0,0,0,0);
  border: 1px solid #999999;
  color: #999999;
  text-shadow: none;
  margin-left: 3px;
}
.label-info {
  background-color: #3a87ad;
}
.label-verified {
    border:1px solid green;
    background-color:transparent;
    background-color:rgba(0,0,0,0);
    color:green;
    text-shadow:none;
}
.label-danger {
    border:1px solid red;
    background-color:transparent;
    background-color:rgba(0,0,0,0);
    color:red;
    text-shadow:none;
}

.tab_content {
    position: relative;
}
.tab_content:not(.left) {
    padding: 12px 0;
}
.left-tabs {
    margin-left: 48px;
}
.floating-options {
    display: inline-block;
    position: absolute;
    right: 0;
    top: 5px;
    padding-right: 5px;
}

i.note-type {
    color: #2a67ac;
    opacity: 0.8;
    border-right: 1px solid rgba(0, 0, 0, 0.2);
    padding-right: 8px;
}

table.custom-info th {
    background: transparent;
    border: none;
    padding-top: 10px;
    border-bottom: 1px dotted rgba(0,0,0,0.9);
}
table.custom-info tr {
    vertical-align: top;
}
table.custom-info td {
    border-bottom: 1px dotted rgba(0,0,0,0.3);
}

div.faq-status {
   padding-top:6px;

}

.faq-title {
    font-size: 170%;
    font-weight: 600;
    margin-right:10px;
}
.faq-content {
    width: 670px;
    margin: 0 15px;
}
.faq-category {
    margin:0 15px;
}
.faq-meta section + section {
    margin-top: 15px;
}

button a {
    color: ButtonText !important;
    text-decoration: none;
}
button a:hover {
    text-decoration: none;
}

.bleed {
    padding: 0;
    margin: 0;
}
.doc-desc-title {
    font-weight: bold;
    text-transform: capitalize;
}
.doc-desc-opt {
    font-style: italic;
}

tr:hover i.help-tip,
tr i.help-tip.warning {
    opacity: 0.8 !important;
    color: #ffc20f;
}

.form_table tr i.help-tip {
    opacity: 0.2;
    margin-left: 5px;
}

.ui-datepicker {
    z-index: 200 !important;
}
/* ... */

